--- a/css/style.css
+++ b/css/style.css
@@ -4584,6 +4584,10 @@ html.has-scroll-dragging {
   color: var(--text);
 }
 
+.team__bottom_description {
+  max-width: 200px;
+}
+
 .team_slider__desc {
   max-width: 100%;
 }
@@ -4739,6 +4743,12 @@ html.has-scroll-dragging {
   display: flex;
   flex-direction: column;
   gap: 40px;
+}
+
+.team_comments__quotes {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .team_comments__quotes svg {
@@ -5054,9 +5064,10 @@ html.has-scroll-dragging {
   }
   .team__top_block {
     padding: 140px 60px 60px;
-    gap: 20px;
   }
-  .team__bottom_block {
+  .team__bottom_block,
+  .team_slider__info,
+  .team_comments__block {
     padding: 60px;
     gap: 20px;
   }
@@ -5070,21 +5081,16 @@ html.has-scroll-dragging {
   .team_clients__item {
     width: calc(25% - 15px);
   }
-  .team_slider__info {
-    padding: 60px;
-    gap: 20px;
-  }
   .team_slider_block {
     height: 300px;
   }
   .team_slider_flex {
     padding: 60px;
   }
-  .team_comments__block {
-    padding: 60px;
-    gap: 20px;
-  }
-  .team_comments__buttons, .team_comments__swiper {
+  .team_slider__info_left,
+  .team_slider__info_right,
+  .team_comments__buttons,
+  .team_comments__swiper {
     width: calc(50% - 10px);
   }
   .swiper-pagination-bullet {
@@ -5381,6 +5387,39 @@ html.has-scroll-dragging {
     height: calc(100% - 80px);
     padding: 20px;
     gap: 0;
+  }
+  .team__top_block {
+    padding: 60px 30px 30px;
+    gap: 30px;
+  }
+  .team__bottom_block {
+    padding: 30px 30px 120px;
+    flex-direction: column;
+    gap: 60px;
+  }
+  .team__bottom_counters {
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+  .team_slider_flex {
+    padding: 30px;
+  }
+  .team_clients_block {
+    height: 211px;
+  }
+  .team_clients__list {
+    padding: 0 30px 30px;
+  }
+  .team_slider__info {
+    padding: 60px 30px;
+  }
+  .team_comments__block {
+    padding: 30px 30px 60px;
+  }
+  .team__bottom_info {
+    width: 100%;
   }
   .swiper-pagination-bullet {
     width: 18px;
@@ -5763,6 +5802,53 @@ html.has-scroll-dragging {
     -webkit-transform: translateY(-3px);
     transform: translateY(-3px);
   }
+  .team__bottom_counters {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .team__bottom_bottom {
+    gap: 100px;
+  }
+  .team__top_block {
+    padding: 60px 20px 20px;
+    gap: 20px;
+  }
+  .team__bottom_block {
+    padding: 20px 20px 60px;
+    gap: 60px;
+  }
+  .team_slider_flex {
+    padding: 20px;
+  }
+  .team_slider__info {
+    padding: 60px 20px;
+    flex-direction: column;
+    gap: 40px;
+  }
+  .team_slider__item {
+    padding: 0 10px;
+  }
+  .team_slider__info_left,
+  .team_slider__info_right,
+  .team_comments__buttons,
+  .team_comments__swiper {
+    width: 100%;
+  }
+  .team_clients__list {
+    padding: 0 20px 20px;
+    gap: 10px;
+  }
+  .team_clients__item {
+    width: calc(33.333% - 7px);
+  }
+  .team_comments__block {
+    padding: 20px 20px 60px;
+    flex-direction: column;
+    gap: 40px;
+  }
+  .team_comments__buttons {
+    justify-content: space-between;
+  }
   .footer__flex {
     padding: 0 0 130px;
   }
@@ -5888,6 +5974,17 @@ html.has-scroll-dragging {
     width: 100%;
     padding: 0 20px;
   }
+  .expertise__panel p,
+  .expertise__panel ul,
+  .expertise__panel span,
+  .expertise__desc,
+  .projects__desc,
+  .project__desc,
+  .team__top_desc,
+  .team__bottom_desc,
+  .team_slider__desc {
+    max-width: 100%;
+  }
   .digital__head {
     height: 66px;
   }
@@ -5918,7 +6015,8 @@ html.has-scroll-dragging {
   .team_comments__navigation .team_comments__prev,
   .team_comments__navigation .team_comments__next,
   .team_comments__navigation .btn__arrow,
-  .team_comments__navigation .btn__side {
+  .team_comments__navigation .btn__side,
+  .team_comments__quotes svg {
     width: 40px;
     height: 40px;
   }
@@ -5935,6 +6033,29 @@ html.has-scroll-dragging {
   .projects__navigation .btn__side_hover {
     -webkit-transform: translateY(-40px);
     transform: translateY(-40px);
+  }
+  .team__bottom_counters {
+    gap: 40px;
+  }
+  .team__bottom_bottom {
+    flex-direction: column;
+    gap: 40px;
+  }
+  .team_clients__item {
+    width: calc(50% - 5px);
+  }
+  .team_comments__image {
+    width: 80px;
+    height: 80px;
+  }
+  .team_comments__flex {
+    gap: 20px;
+  }
+  .team_slider__item {
+    gap: 10px;
+  }
+  .team_slider_info {
+    gap: 5px;
   }
   .swiper-horizontal > .swiper-pagination-bullets,
   .swiper-pagination-bullets.swiper-pagination-horizontal,
